hphp/test/slow/namespace/use_strict.php.expectf

Fatal error: You seem to be trying to use a different language... in %s/test/slow/namespace/use_strict.php on line 3
